--- a/requirements_OLD2.txt
+++ b/requirements_OLD2.txt
@@ -7,9 +7,7 @@ idna==2.10
 Pillow==9.1.0
 requests==2.25.1
 sqlparse==0.4.2
-whitenoise==6.0.0
-django-heroku==0.3.1
-dj-database-url==0.5.0
-tensorflow-cpu==2.7.0
-scikit-learn==0.24.2
-scipy==1.6.3
+numpy==1.20.3
+Keras==2.3.1
+Theano==1.0.5
+
