--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,6 @@ dj-database-url==0.5.0
 tensorflow-cpu==2.7.0
 scikit-learn==0.24.2
 scipy==1.6.3
+joblib==0.14.1
+h5py==3.1.0
+scikit-learn==0.24.2
